--- a/FXExperienceControls/src/main/resources/styles/PopupEditor.css
+++ b/FXExperienceControls/src/main/resources/styles/PopupEditor.css
@@ -31,5 +31,51 @@
  */
 
 /* Need to remove the blue color when hovering the menu item */
+.root {
+    -fx-color: #111;
+    -fx-focus-color: #111;
+    -fx-background: #111;
+    -fx-selection-bar: #222;
+    -fx-text-background-color: #C2C2C9;
+    -fx-fill: #C2C2C9;
+    -fx-box-border: #222;
+}
+.editor-host {
+    -fx-background-color: #222;
+}
 
+/*******************************************************************************
+ *                                                                             *
+ * PopupMenu                                                                   *
+ *                                                                             *
+ ******************************************************************************/
+
+
+.context-menu {
+    -fx-background-color:
+            linear-gradient(to bottom,
+            derive(-fx-color,-17%),
+            derive(-fx-color,-30%)
+            ),
+            -fx-control-inner-background;
+    -fx-background-insets: 0, 1;
+    -fx-padding: 0.333333em 0.083333em 0.333333em 0.083333em; /* 4 1 8 1 */
+    -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.2) , 12, 0.0 , 0 , 8 );
+}
+.context-menu .separator:horizontal .line {
+    -fx-border-color: -fx-box-border transparent transparent transparent;
+    -fx-border-insets: 1 0 0 0;
+}
+.context-menu > .scroll-arrow {
+    -fx-padding: 0.416667em 0.416667em 0.416667em 0.416667em; /* 5 */
+    -fx-background-color: transparent;
+}
+.context-menu > .scroll-arrow:hover {
+    -fx-background: -fx-selection-bar;
+    -fx-background-color: -fx-background;
+    -fx-text-fill: -fx-text-background-color;
+}
+.context-menu:show-mnemonics > .mnemonic-underline {
+    -fx-stroke: -fx-text-fill;
+}
 
